--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@better-auth/stripe",
   "author": "Bereket Engida",
-  "version": "1.2.8-beta.3",
+  "version": "1.2.8",
   "main": "dist/index.cjs",
   "license": "MIT",
   "keywords": [
@@ -40,7 +40,7 @@
     }
   },
   "dependencies": {
-    "better-auth": "1.2.8-beta.3",
+    "better-auth": "^1.2.8",
     "better-call": "^1.0.9",
     "zod": "^3.24.1"
   },
